# atomic

./: .appveyor.yml  .clang-format  .travis.yml  CMakeLists.txt  README.md
include/atomic/: atomic.h  atomic_msvc.h  spinlock.h
test/: CMakeLists.txt  atomic_test.cpp
test/doctest/: CMakeLists.txt
